--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.8",
-    "styled-components": "^5.3.5",
+    "styled-components": "^5.3.11",
+    "tailwind.macro": "^0.5.10",
+    "twin.macro": "^3.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
